modified .env file

--- a/config.env
+++ b/config.env
@@ -10,3 +10,4 @@ CLOUDINARY_API_SECRET = QRa8NIbwe_6CUMO5bae0IPqc2Yw
 CLOUDINARY_CLOUD_NAME = dpkd1ijpg
 PAYSTACK_SECRET_KEY = sk_test_5487f0fe62be0bd4482e38bf627835c9a3063fbc
 PAYSTACK_PUBLIC_KEY=pk_test_f060be41f1ddd2d1e5c0430def5a56eb4d5d0ab2
+CALLBACK_URL = http://localhost:5173/payment/success
